prevent the homepage image from resizing and doing a layout shift

--- a/src/_sass/_base.scss
+++ b/src/_sass/_base.scss
@@ -13,7 +13,7 @@ body {
 
 
 #starscape {
-	position: absolute;
+	position: fixed;
 	top: 0;
 	right: 0;
 	left: 0;
