--- a/src/_sass/_homepage.scss
+++ b/src/_sass/_homepage.scss
@@ -28,6 +28,7 @@
 	align-self: start;
 	position: relative;
 	max-width: max-content;
+	height: auto;
 
 	&:before {
 		content: '';
